# waterside

./: LICENSE
code/waterside/: CMakeLists.txt  CMakePresets.json  vcpkg.json  vs2022.bat
code/waterside/GameServer/: CMakeLists.txt  CommonConfig_generated.h  GameConfigManager.h  GameConfig_generated.h  GameServer.cpp  GameServer.h  main.cpp
code/waterside/GateServer/: CMakeLists.txt  CommonConfig_generated.h  GateConfigManager.h  GateConfig_generated.h  GateServer.cpp  GateServer.h  main.cpp
code/waterside/GateServer/dispatch/: DispatchManager.h  LoginDispatch.cpp  LoginDispatch.h
code/waterside/LoginServer/: CMakeLists.txt  LoginConfigManager.h  LoginConfig_generated.h  LoginMysqlManager.cpp  LoginMysqlManager.h  LoginPrerequisites.h  LoginServer.cpp  LoginServer.h  main.cpp
code/waterside/LoginServer/dispatch/: DispatchManager.cpp  LoginDispatch.cpp  LoginDispatch.h
code/waterside/LoginServer/mysql/: LoginMysqlManager.cpp  LoginMysqlManager.h  LoginMysqlManagerBase.cpp  LoginMysqlManagerBase.h
code/waterside/NameRegServer/: CMakeLists.txt  NameRegConfigManager.h  NameRegConfig_generated.h  NameRegManager.cpp  NameRegManager.h  NameRegPrerequisites.h  NameRegServer.cpp  NameRegServer.h  main.cpp
code/waterside/fbs/: message_id_generated.h  message_login_generated.h
code/waterside/stmtc/: CMakeLists.txt  StmtConfig_generated.h  StmtFile.cpp  StmtFile.h  main.cpp
code/waterside/test_client/: CMakeLists.txt  main.cpp
code/waterside/test_server/: CMakeLists.txt  main.cpp
code/waterside/waterside/: CMakeLists.txt  waterside.cpp  waterside.h
code/waterside/waterside_core/: CMakeLists.txt  fbs.bat  prerequisites.cpp  prerequisites.h  rpc_protocol.fbs
code/waterside/waterside_core/frame/: ConfigLoader.cpp  ConfigLoader.h  ServerBase.cpp  ServerBase.h
code/waterside/waterside_core/id/: SnowflakeId.cpp  SnowflakeId.h
code/waterside/waterside_core/logger/: Logger.h  LoggerAppender.cpp  LoggerAppender.h  LoggerRecord.cpp  LoggerRecord.h
code/waterside/waterside_core/network/: CoroNetworkDispatcher.h  IoContextPool.cpp  IoContextPool.h  NetworkBase.cpp  NetworkBase.h  NetworkDispatcher.h  NetworkDispatcherManager.cpp  NetworkDispatcherManager.h  RouteBase.cpp  RouteBase.h  SessionBase.cpp  SessionBase.h  SessionIdManager.cpp  SessionIdManager.h  TcpNetwork.cpp  TcpNetwork.h  TcpSession.cpp  TcpSession.h  rpc_protocol_generated.h
code/waterside/waterside_core/object/: ObjectBase.cpp  ObjectBase.h  ObjectManager.cpp  ObjectManager.h
code/waterside/waterside_core/signal/: MultiSignal.h  SignalHandle.cpp  SignalHandle.h  SingleSignal.h
code/waterside/waterside_core/time/: TimerManager.cpp  TimerManager.h
code/waterside/waterside_mysql/: CMakeLists.txt  MysqlException.h  MysqlManager.cpp  MysqlManager.h  MysqlPrepareStmt.cpp  MysqlPrepareStmt.h  MysqlPrerequisites.h  MysqlSession.cpp  MysqlSession.h  MysqlStmtArgs.h
code/waterside/waterside_route/: CMakeLists.txt  Router.cpp  Router.h
config/: CommonConfig.fbs  GameConfig.fbs  GameConfig.json  GateConfig.fbs  GateConfig.json  LoginConfig.fbs  LoginConfig.json  NameRegConfig.fbs  NameRegConfig.json  fbs.bat
db/: StmtConfig.fbs  db.bat  db_login.json  fbs.bat
protocol/: fbs.bat  message_id.fbs  message_login.fbs
sql/: waterside_login.sql
